--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,261 @@
-<center>
-<img src="new.png" width="100%"/>
-<br/>
-<img src="ceu_codecamp.jpg"/>
-</center>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Your Name | Portfolio</title>
+    <style>
+        /* ------------------------------------------------------------
+           Base/Structural classes
+        ------------------------------------------------------------ */
+
+        /* Container: Centralized layout with consistent padding */
+        .container {
+            width: 80%;
+            margin: 0 auto;
+            max-width: 1200px;
+        }
+
+        /* Flexbox Utility Class for Centering */
+        .flex-center {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        /* Block Level Element Spacing */
+        .section {
+            padding: 60px 0;
+        }
+
+        /* ------------------------------
+           Layout / Structural Classes
+        ------------------------------ */
+
+        /* Hero Section: Full Width with background */
+        .hero {
+            background: url('https://source.unsplash.com/1600x900/?coding,developer') no-repeat center center/cover;
+            color: white;
+            text-align: center;
+            padding: 120px 0;
+        }
+
+        .hero-title {
+            font-size: 3.5rem;
+            margin-bottom: 20px;
+            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.6);
+        }
+
+        .hero-subtitle {
+            font-size: 1.6rem;
+            margin-bottom: 30px;
+            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.6);
+        }
+
+        /* Portfolio Grid */
+        .grid {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            gap: 30px;
+            margin-top: 30px;
+        }
+
+        /* Reusable Portfolio Item Card */
+        .card {
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            width: 30%;
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .card:hover {
+            transform: scale(1.05);
+        }
+
+        .card img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+            border-radius: 8px;
+        }
+
+        /* Button Styles */
+        .btn {
+            background-color: #ff6347;
+            color: white;
+            padding: 12px 30px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 1.2rem;
+            transition: background-color 0.3s ease;
+        }
+
+        .btn:hover {
+            background-color: #e5533d;
+        }
+
+        /* Section Titles */
+        h2 {
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+            text-align: center;
+        }
+
+        /* About Section */
+        .about p {
+            text-align: center;
+            font-size: 1.1rem;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        /* Skills Section */
+        .skills ul {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            list-style: none;
+            gap: 20px;
+            font-size: 1.1rem;
+            margin-top: 20px;
+        }
+
+        .skills ul li {
+            background-color: #f8f8f8;
+            padding: 10px 20px;
+            border-radius: 25px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Contact Section */
+        .contact {
+            background: #333;
+            color: white;
+            text-align: center;
+        }
+
+        .contact p {
+            margin-bottom: 20px;
+            font-size: 1.2rem;
+        }
+
+        /* Footer */
+        .footer {
+            background: #222;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        .footer p {
+            font-size: 1rem;
+        }
+
+        /* -------------------------------
+           Responsive Design for Small Devices
+        ------------------------------- */
+        @media (max-width: 768px) {
+            .card {
+                width: 48%;
+            }
+
+            .grid {
+                justify-content: center;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .card {
+                width: 100%;
+            }
+
+            .hero-title {
+                font-size: 2rem;
+            }
+
+            .hero-subtitle {
+                font-size: 1rem;
+            }
+        }
+    </style>
+</head>
+
+<body>
+
+    <header class="hero">
+        <div class="container">
+            <h1 class="hero-title">Hello, I'm Arman Anthony Francia</h1>
+            <p class="hero-subtitle">A passionate System Developer</p>
+            <a href="#portfolio" class="btn">View My Work</a>
+        </div>
+    </header>
+
+    <section id="about" class="about section">
+        <div class="container">
+            <h2>About Me</h2>
+            <p>
+                I am a System Developer with a passion for programming. With experience in [technologies or industries you've worked with], I specialize in [key areas of expertise].
+                I enjoy collaborating on creative solutions and pushing the boundaries of what can be achieved with [tools or frameworks you use].
+            </p>
+        </div>
+    </section>
+
+    <section id="skills" class="skills section">
+        <div class="container">
+            <h2>My Skills</h2>
+            <ul>
+                <li>HTML, CSS, JavaScript</li>
+                <li>React, Node.js</li>
+                <li>Python, Django</li>
+                <li>UI/UX Design</li>
+                <li>Project Management</li>
+            </ul>
+        </div>
+    </section>
+
+    <section id="portfolio" class="portfolio section">
+        <div class="container">
+            <h2>Portfolio</h2>
+            <div class="grid">
+                <div class="card">
+                    <img src="https://source.unsplash.com/500x300/?web-design" alt="Project 1">
+                    <h3>Project Title 1</h3>
+                    <p>Brief description of the project.</p>
+                </div>
+                <div class="card">
+                    <img src="https://source.unsplash.com/500x300/?development" alt="Project 2">
+                    <h3>Project Title 2</h3>
+                    <p>Brief description of the project.</p>
+                </div>
+                <div class="card">
+                    <img src="https://source.unsplash.com/500x300/?technology" alt="Project 3">
+                    <h3>Project Title 3</h3>
+                    <p>Brief description of the project.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="contact section">
+        <div class="container">
+            <h2>Contact Me</h2>
+            <p>If you'd like to work together or just want to chat, feel free to reach out!</p>
+            <a href="mailto:yarmanfrancia402@gmail.com" class="btn">Send an Email</a>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2024 Arman Francia. All rights reserved.</p>
+        </div>
+    </footer>
+
+</body>
+
+</html>
